test/compile-fail/resolution/type-existence/ambiguous-item/expected.txt
error[E0428]: the name `d` is defined multiple times
  ┌─ ./test/compile-fail/resolution/type-existence/ambiguous-item/top.rhdl:5:6
  │
5 │ enum d {}
  │      - previous definition of the name `d` here
6 │ struct d {}
  │        ^ `d` redefined here

error: `d` is ambiguous (type versus other types found during resolution)
  ┌─ ./test/compile-fail/resolution/type-existence/ambiguous-item/top.rhdl:2:8
  │
2 │     b: d,
  │        ^ ambiguous name
  │
  = rename other types with the same name

error: `d` is ambiguous (type versus other types found during resolution)
  ┌─ ./test/compile-fail/resolution/type-existence/ambiguous-item/top.rhdl:3:8
  │
3 │     c: d,
  │        ^ ambiguous name
  │
  = rename other types with the same name

